# NexusAgent-OmniScraper

./: .gitignore  AGENT_LEDGER.md  LICENSE  README.md  pyproject.toml
omni_scraper/: __init__.py  cli.py  core.py  robots.py  run_seeds.py
omni_scraper/harness/: __init__.py  bundle.py  extractor.py  ledger.py  prompts.py  router.py  runner.py  scout.py  seed_batch.py  text.py
omni_scraper/models/: __init__.py  lm_studio.py
omni_scraper/pipeline/: packets.py  prompts.py
omni_scraper/reduce/: __init__.py  accessibility.py  fetch.py  html_to_markdown.py  link_cluster.py  signals.py
omni_scraper/schemas/: __init__.py  extraction.py  router.py  scout.py
omni_scraper/validate/: __init__.py  evidence.py  regexes.py
tests/: test_core.py  test_evidence_validation.py  test_lm_studio.py  test_reduce.py
